add img and variables

--- a/src/assets/scss/partials/variables.scss
+++ b/src/assets/scss/partials/variables.scss
@@ -1,1 +1,7 @@
 //VARIABLES
+$main-color:#7f7045;
+$second-color:#CE7C2A;
+$text-color:#444444;
+$bg-main-section:#FFFFFF;
+$bg-second-section:#F5F5F5;
+$bg-button-home:#FFCC01;
